resources/css/style.css
html {
  background-color: white;
  font-family: Helvetica;
  font-size: 18px;
}

body {
  line-height: 1.4rem;
}

.container {
  max-width: 960px;
  margin: auto;
}

.flex {
  display: flex;
}

a {
  color: white;
  text-decoration: none;
}

ul {
  list-style-type: none;
}

/* Header */

header {
  height: 30rem;
  background-image: url("../images/glasses-bg.png");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  padding-top: 1rem;
}

h1 {
  font-size: 2rem;
  font-weight: bold;
  margin: .67em 0;
}

nav {
  padding: 1rem 0;
  background-color: cadetblue;
  color: white;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

nav div {
  display: flex;
  align-items: center;
}

nav img {
  height: 1.5rem;
  margin-left: 2rem;
  margin-right: 1rem;
}

ul li {
  display: inline;
  padding: 0 1rem;
}

ul {
  margin-right: 1rem;
}

.truncated-menu {
  display: none;
}

header .flex {
  justify-content: flex-end;
}

.main-banner {
  background-color: white;
  padding: 0.75rem 5rem;
  display: inline-block;
  margin-top: 10rem;
  margin-right: -2rem;
  line-height: 2.4rem;
}

/* Sections  */

.supporting {
  display: flex;
  justify-content: center;
  flex-direction: row;
}

/* Icon section  */

.icons {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  text-align: center;
  margin: 3rem;
  width: 5rem;
  height: 8rem;
}

.icons img {
  width: 5rem;
  margin-bottom: 1rem;
}

.icons img .paper-icon {
  width: 3.5rem;
}

section {
  display: flex;
  width: 100%;
  height: auto;
  align-items: flex-start;
  flex-direction: column;
}

/* Info section  */

.info {
  width: 35%;
  margin-right: 5%;
  margin-bottom: 4rem;
}

.info p {
  padding: 1rem 0;
}

.title {
  background-color: cadetblue;
  padding: 0.5rem 1.25rem;
  font-weight: bold;
  color: white;
  max-width: 10rem;
}

/* Footer */

footer {
  padding: 4rem 2rem;
  background-color: azure;
  display: flex;
  align-items: center;
}

footer img {
  height: 1.5rem;
  margin-left: 2rem;
  margin-right: 1rem;
}

/* Tablet */

@media only screen and (max-width: 1024px) {
  header {
    height: 22rem;
    padding-top: 0;
  }
  nav .container {
    max-width: 100%
  }
  .main-banner {
    padding: 0.75rem 4rem;
    margin-right: 2rem;
    margin-top: 5rem;
  }
  h1 {
    font-size: 1.33rem;
  }
}

/* Mobile */

@media only screen and (max-width: 480px) {
  header {
    height: 17rem;
    padding-top: 0;
    background-position: 20%;
  }
  .menu ul {
    display: none;
  }
  .truncated-menu ul {
    display: block;
  }
  h1 {
    font-size: 1rem;
  }
  .main-banner {
    padding: 0 1rem;
    margin: 9rem auto 0 auto;
    width: 100%;
    text-align: center;
  }
  .supporting {
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    margin-top: 3rem;
  }
  .service {
    height: auto;
    margin: .77rem;
    font-size: .77rem;
  }
  .info {
    width: auto;
  }

  .info .title {
    width: 100%;
    max-width: 100%;
    text-align: center;
  }

  .info p {
    padding: 1rem;
    font-size: .77rem;
  }
  footer {
    justify-content: center;
  }
  footer p {
    display: none;
  }
}

